# SC-map-editer

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
engine/: __init__.py  blast.py  chk.py  cli.py  mpq.py  scmap.py  terrain.py  triggerbuild.py  triggers.py  units.py
examples/coop_zeratul_tychus/: README.md  build_coop.py  eud_abilities.py
examples/survival_in_mars/: README.md  build_short_english.py  korean_strings.json  translations.py
tests/: test_roundtrip.py
